<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/add_always_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_always_blocked_app" />

        <Button
            android:id="@+id/add_blocked_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_blocked_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always_blocked_apps"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/always_apps_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/no_blocked_apps"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/always_apps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocked_apps"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blocked_apps_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/no_blocked_apps"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/blocked_apps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>
